# LiveBooster-C-Library

./: .gitignore  ChangeLog.md  LICENSE.txt  README.md  THIRD-PARTY.txt
Docs/: ArduinoApplication.md  ArduinoM0Pro.md  ChipKITuc32.md  CollectedData.md  Commands.md  ConfigurationParameters.md  HeraclesShield.md  LinuxApplication.md  LiveBoosterErrors.md  MbedApplication.md  NucleoF746zg.md  NucleoL476rg.md  RaspberryPi3.md  Resources.md  UdooNeo.md  UserApplication.md
LiveBooster-ArduinoApp/: ArduinoDebugImpl.cpp  ArduinoDebugImpl.h  ArduinoSerialImpl.cpp  ArduinoSerialImpl.h  ArduinoTimerImpl.cpp  ArduinoTimerImpl.h  LiveBooster-ArduinoApp.ino
LiveBooster-C-Library/: LiveBooster.h
LiveBooster-C-Library/src/heraclesGsm/: GsmFifo.c  GsmFifo.h  HeraclesModem.c  HeraclesModem.h  HeraclesTcpClient.c  HeraclesTcpClient.h  TcpClientInterface.h
LiveBooster-C-Library/src/jsonParser/: jsmn.c
LiveBooster-C-Library/src/liveBooster/: LiveBoosterInterface.h
LiveBooster-C-Library/src/liveBooster/liveBoosterPacket/: LiveBooster_code_b64.c  LiveBooster_code_b64.h  LiveBooster_config.h  LiveBooster_core.c  LiveBooster_core.h  LiveBooster_defs.h  LiveBooster_http.c  LiveBooster_http.h  LiveBooster_json_api.c  LiveBooster_json_api.h  LiveBooster_md5.c  LiveBooster_md5.h  LiveBooster_msg.h  LiveBooster_msg_decode.c  (+1 more)
LiveBooster-C-Library/src/mqttClient/: MqttClient.c  MqttClient.h  MqttInterface.h
LiveBooster-C-Library/src/serial/: SerialInterface.h
LiveBooster-C-Library/src/timer/: TimerInterface.h
LiveBooster-C-Library/src/traceDebug/: DebugInterface.h
LiveBooster-LinuxApp/: CMakeLists.txt
LiveBooster-LinuxApp/LinuxApp/: Linux_test.c
LiveBooster-LinuxApp/LinuxImpl/: LinuxDebugImpl.c  LinuxDebugImpl.h  LinuxSerialImpl.c  LinuxSerialImpl.h  LinuxTimerImpl.c  LinuxTimerImpl.h
LiveBooster-MbedApp/MbedApp/: Mbed_test.cpp
LiveBooster-MbedApp/MbedImpl/: MbedDebugImpl.cpp  MbedDebugImpl.h  MbedSerialImpl.cpp  MbedSerialImpl.h  MbedTimerImpl.cpp  MbedTimerImpl.h
(+7 files in other folders)
